
==Libraries==

Jargon-core uses Maven for dependency management.  See the pom.xml file for references to various dependencies.

Note that the following bug and feature requests are logged in GForge with related commit information [[https://code.renci.org/gf/project/jargon/tracker/]]

==Bug Fixes==

* [#872] numeric gen query with datasize gives errors in condition

==Features==

 * [#775] iDrop 1.1.0 refactoring activities
 ** clean up deprecated methods and fix visibility so DataTransferOperations is the public API for put/get/copy/move
 
 * [#114] support for mounted collections, cross zone browsing, and soft links
 ** significant refactoring as support added, cleanup of deprecated methods, tightening package visibility
 ** added a MountedCollectionAO to administer mounted collections and soft links 
 ** Refactoring of key classes for support
 **** CollectionAndDataObjectListAndSearchAO
 **** DataObjectAO
 **** DataTransferOperations
 **** CollectionAO
 **** IRODSFile
 **** IRODSInputStream
 **** IRODSOutputStream
 
 *  [#696] Add ticket support
 ** added compareGivenTicketToActualAndUpdateAsNeeded() method to TicketAdminService, which allows for updating an entire ticket, computing deltas and updating fields as appropriate
 ** added support to stream data via an output stream to an iRODS collection with a ticket
 
 *  [#853] IP - add ticket by admin
 ** added ability to create a ticket for another user (given that the creator is rodsAdmin)

 * [#864] 2.5 iRODS protocol errors
 ** update tests for 2.5 backwards compatability
 ** overhead misc operations to normalize errors (especially DuplicateDataException and DataNotFoundException) which are indicated
 by different iRODS error codes in 2.5 and prior.
 
 
 * [#865] factor helper classes into jargon core and remove
 ** this is a general project cleanup and simplification task.  THe testing libraries have been consolidated and placed