@@ -1,0 +1,3 @@
+ruleBug914||msiSubstr(*args,0,null,*out)|nop
+*args="-c 300 -r 300 --zoom=2 -j --red=/dmslab1/irods1/store1/hst/home/rods/hst/test/j8d6/01/j8d601011_drz.fits --blue=/dmslab1/irods1/store1/hst/home/rods/hst/test/j8d6/01/j8d601021_drz.fits"
+*out
