@@ -46,6 +46,7 @@ Note that the following bug and feature requests are logged in GForge with relat
 ==Bug Fixes==
 
 * [#872] numeric gen query with datasize gives errors in condition
+* [#914] rule error : could not find name and val separated by an '=' sign in input attribute
 
 ==Features==
 
